<resources>
    <string name="app_name">poke-poke-dex-android</string>

    <string name="for_detail_icon">></string>
    <string name="for_list_icon">&lt;</string>
    <string name="id_prefix">No.</string>
    <string name="name_interfix">\ </string>
    <string name="type_interfix">" / "</string>
    <string name="height_suffix">"m / "</string>
    <string name="weight_suffix">kg</string>
    <string name="egg_group_interfix">" / "</string>

    <string name="item_name">Name</string>
    <string name="item_class">Class</string>
    <string name="item_type">Type</string>
    <string name="item_height_weight">Height / Weight</string>
    <string name="item_egg_group">Egg Group</string>
    <string name="item_status">Status</string>
    <string name="item_flavor_text">Flavor Text</string>
    <string name="image_description1">default image</string>
    <string name="image_description2">default back image</string>
    <string name="image_description3">shiny image</string>
    <string name="image_description4">shiny back image</string>
</resources>