<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="vm"
            type="jp.kuskyst.poke_poke_dex_android.viewmodel.DetailViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.DetailFragment">

        <TextView
            android:id="@+id/pokemon_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:background="@color/main"
            android:text="@{@string/id_prefix + vm.detail.id + @string/name_interfix + vm.detail.name}"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:background="@null"
            android:text="@string/for_list_icon"
            android:textSize="20sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/pokemon_name"
            app:layout_constraintStart_toStartOf="@+id/pokemon_name"
            app:layout_constraintTop_toTopOf="@+id/pokemon_name"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:id="@+id/image_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/pokemon_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <ImageView
                android:id="@+id/pokemon_image1"
                android:contentDescription="@string/image_description1"
                android:layout_width="80dp"
                android:layout_height="80dp" />
            <ImageView
                android:id="@+id/pokemon_image2"
                android:contentDescription="@string/image_description2"
                android:layout_width="80dp"
                android:layout_height="80dp" />
            <ImageView
                android:id="@+id/pokemon_image3"
                android:contentDescription="@string/image_description3"
                android:layout_width="80dp"
                android:layout_height="80dp" />
            <ImageView
                android:id="@+id/pokemon_image4"
                android:contentDescription="@string/image_description4"
                android:layout_width="80dp"
                android:layout_height="80dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/item_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_class"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/image_list"
            app:layout_constraintStart_toStartOf="@+id/image_list" />

        <TextView
            android:id="@+id/pokemon_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{vm.species.genera[0].genus}"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="@+id/item_class"
            app:layout_constraintEnd_toEndOf="@+id/image_list" />

        <TextView
            android:id="@+id/item_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_type"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/item_class"
            app:layout_constraintStart_toStartOf="@+id/image_list" />

        <TextView
            android:id="@+id/pokemon_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{vm.detail.types[0].type.name + @string/type_interfix + vm.detail.types[1].type.name}"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="@+id/item_type"
            app:layout_constraintEnd_toEndOf="@+id/image_list" />

        <TextView
            android:id="@+id/item_height_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_height_weight"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/item_type"
            app:layout_constraintStart_toStartOf="@+id/image_list" />

        <TextView
            android:id="@+id/pokemon_height_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(vm.detail.height / 10) + @string/height_suffix + String.valueOf(vm.detail.weight / 10) + @string/weight_suffix}"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="@+id/item_height_weight"
            app:layout_constraintEnd_toEndOf="@+id/image_list" />

        <TextView
            android:id="@+id/item_egg_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_egg_group"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/item_height_weight"
            app:layout_constraintStart_toStartOf="@+id/image_list" />

        <TextView
            android:id="@+id/pokemon_egg_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{vm.species.egg_groups[0].name + @string/egg_group_interfix + vm.species.egg_groups[1].name}"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="@+id/item_egg_group"
            app:layout_constraintEnd_toEndOf="@+id/image_list" />

        <TextView
            android:id="@+id/item_flavor_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_flavor_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/item_egg_group"
            app:layout_constraintStart_toStartOf="@+id/image_list" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/flavor_text_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:listitem="@layout/row_flavortext"
            app:layout_constraintTop_toBottomOf="@+id/item_flavor_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/image_list"
            app:layout_constraintEnd_toEndOf="@+id/image_list" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>